# lessmark

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  PUBLISHING.md  README.lmk  README.md  README.mu  package-lock.json  package.json  wrangler.toml
.github/ISSUE_TEMPLATE/: format-change.yml
.github/workflows/: ci.yml  release.yml
crates/lessmark/: Cargo.toml  README.md
crates/lessmark/schemas/: ast-v0.schema.json  language-v0.contract.json  profiles-v0.contract.json
crates/lessmark/src/: ast.rs  error.rs  format.rs  grammar.rs  lib.rs  markdown.rs  parser.rs  rules.rs  validate.rs
crates/lessmark/tests/: cli.rs  fixtures.rs
docs/: agent-context-profile.md  agent-context-profile.mu  article-alignment.md  article-alignment.mu  conformance.mu  design-comparison.md  docs-profile.md  docs-profile.mu  file-type-registration.md  file-type-registration.mu  governance.mu  lessmark-methodology.md  markdown-chaos-timeline.md  markdown-chaos-timeline.mu  markdown-comparison.md  markdown-comparison.mu  markdown-research.md  media-type.md  media-type.mu  profiles.mu  release-checklist.md  release-checklist.mu  spec.md  spec.mu  standardization.md  standardization.mu
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
examples/: agent-instructions.lmk
fixtures/invalid/: bad-api-name.lmk  bad-code-lang.lmk  bad-definition-term.lmk  bad-depends-on-target.lmk  bad-docs-blocks.mu  bad-file-path.mu  bad-link-href.lmk  bad-metadata-key.lmk  (+21 more)
schemas/: ast-v0.schema.json  profiles-v0.contract.json
scripts/: check-docs.mjs  check-editors.mjs  conformance.mjs  fuzz.mjs  readiness.mjs  register-windows-filetype.ps1  release-check.mjs  security.mjs  soak.mjs  stress.mjs
site/: index.html  package-lock.json  package.json  vite.config.ts
spec/: ast-v0.schema.json  lessmark-v0.md
(+111 files in other folders)
