[package]
name = "lessmark"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Canonical parser, validator, formatter, JSON AST, and CLI for Lessmark"
repository = "https://github.com/jasperdevs/lessmark"
readme = "README.md"
keywords = ["lessmark", "markdown", "ast", "agent", "parser"]
categories = ["parser-implementations", "command-line-utilities", "text-processing"]

[[bin]]
name = "lessmark"
path = "src/bin/lessmark.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
