[package]
name = "lessmark"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Readable markup with typed blocks and a stable JSON AST."
repository = "https://github.com/jasperdevs/lessmark"
homepage = "https://lessmark.org"
readme = "README.md"
keywords = ["lessmark", "markdown", "ast", "agent", "parser"]
categories = ["parser-implementations", "command-line-utilities", "text-processing"]

[[bin]]
name = "lessmark"
path = "src/bin/lessmark.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
